appsettings.json file updated

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-IUIMRE0\\SQLEXPRESS;Database=TechPrimeLab;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=DESKTOP-IUIMRE0\\SQLEXPRESS;Database=TechPrimeLab;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
 }
-
 
